--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "express-validator": "^7.2.0",
+    "method-override": "^3.0.0",
     "mongoose": "^8.5.4",
     "nodemailer": "^6.9.15",
     "slugify": "^1.6.6"
